force-app/src/objects/c2g__AllocationFilterStructure__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationfilterstructure</customHelpPage>
    <description>Defines the allocation filter structure for the template.</description>
    <fields>
        <fullName>c2g__AllocationTemplate__c</fullName>
        <label>Allocation Template</label>
        <referenceTo>c2g__AllocationTemplate__c</referenceTo>
        <relationshipLabel>Allocation Filter Structures</relationshipLabel>
        <relationshipName>AllocationTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__DefaultFilterCriteria__c</fullName>
        <label>Default Filter Criteria</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiselect</fullName>
                    <default>true</default>
                    <label>Multiselect</label>
                </value>
                <value>
                    <fullName>FromTo</fullName>
                </value>
                <value>
                    <fullName>Equals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__FilterFor__c</fullName>
        <label>Filter For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribute To Gla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__FilterPosition__c</fullName>
        <label>Filter Position</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__FilterStructureType__c</fullName>
        <label>Filter Structure Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>codaGeneralLedgerAccount__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension1__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension2__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension3__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension4__c</fullName>
                </value>
                <value>
                    <fullName>codaCompany__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allocation Filter Structure</label>
    <nameField>
        <displayFormat>AFS{00000}</displayFormat>
        <label>Allocation Filter Structure</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Filter Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>